--- a/snowy-web/src/style/default.less
+++ b/snowy-web/src/style/default.less
@@ -1,16 +1,16 @@
 @import 'ant-design-vue/es/style/themes/default.less';
 
 :root {
-  --blue-1: #e6f7ff;
-  --blue-2: #bae7ff;
-  --blue-3: #91d5ff;
-  --blue-4: #69c0ff;
-  --blue-5: #40a9ff;
-  --blue-6: #1890ff;
-  --blue-7: #096dd9;
-  --blue-8: #0050b3;
-  --blue-9: #003a8c;
-  --blue-10: #002766;
+  --blue-1: #e9f7f3;
+  --blue-2: #d0efe6;
+  --blue-3: #a8decf;
+  --blue-4: #7fcdb8;
+  --blue-5: #53bba0;
+  --blue-6: #1f8a70;
+  --blue-7: #16745f;
+  --blue-8: #115b4b;
+  --blue-9: #0b4438;
+  --blue-10: #072f28;
 
   --green-1: #f6ffed;
   --green-2: #d9f7be;
@@ -192,9 +192,9 @@
   --radio-disabled-button-checked-color: @disabled-color;
 
   // Layout
-  --layout-body-background: #f0f2f5;
-  --layout-header-background: #001529;
-  --layout-trigger-background: #002140;
+  --layout-body-background: #f2faf8;
+  --layout-header-background: #1f8a70;
+  --layout-trigger-background: #16745f;
   //--layout-sider-background-1: coverTintMixin(#001529, 10%);
 
   // Dropdown 有两个
